--- a/day2/package.json
+++ b/day2/package.json
@@ -1,15 +1,14 @@
 {
-    "name": "day2",
-    "version": "0.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "scripts": {
-        "test": "mocha"
-    }
+  "name": "day2",
+  "version": "1.0.0",
+  "description": "Day 2 project",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "author": "JP Hashagen <jayp33e@gmail.com>",
+  "license": "ISC",
+  "directories": {
+    "test": "test"
+  }
 }
-
